# kbs-types

./: CODEOWNERS  Cargo.toml
.github/workflows/: code_quality.yml  unit_tests.yml
src/: error.rs  hash_algorithm.rs  lib.rs
src/plugins/: mod.rs
src/plugins/resource/: id_key.rs  mod.rs
src/tee/: mod.rs  sev.rs  snp.rs
testdata/: sev_request.json
