[package]
name = "kbs-types"
description = "Rust (de)serializable types for KBS"
version = "0.1.0"
authors = ["Sergio Lopez <slp@redhat.com>"]
edition = "2021"
homepage = "https://github.com/virtee/kbs-types"
license = "Apache-2.0"

[features]
tee-sev = [ "sev" ]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sev = { version = "0.3.0", features = ["openssl"], optional = true }

[dev-dependencies]
codicon = "3.0.0"
procfs = "0.10.1"
reqwest = "0.9.15"

