[package]
name = "kbs-types"
description = "Rust (de)serializable types for KBS"
version = "0.6.0"
authors = ["Sergio Lopez <slp@redhat.com>"]
edition = "2021"
homepage = "https://github.com/virtee/kbs-types"
license = "Apache-2.0"

[features]
default = [ "std" ]
alloc = [ "serde/alloc", "serde_json/alloc" ]
std = [ "serde/std", "serde_json/std" ]
tee-sev = [ "sev" ]
tee-snp = [ "sev" ]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
sev = { version = "2.0.2", features = ["openssl"], optional = true }

[dev-dependencies]
codicon = "3.0.0"
curl = "0.4"
procfs = "0.15"
